--- a/Pipeline_imfit-LensImgs.ipynb
+++ b/Pipeline_imfit-LensImgs.ipynb
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "bb624408",
    "metadata": {
     "scrolled": false
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4c7f9485",
    "metadata": {},
    "outputs": [
@@ -1191,10 +1191,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accpetance rate = 27.51%\n",
-      "accpetance rate = 25.51%\n",
-      "accpetance rate = 24.65%\n",
-      "accpetance rate = 20.69%\n"
+      "accpetance rate = 34.55%\n",
+      "accpetance rate = 36.09%\n",
+      "accpetance rate = 36.4%\n",
+      "accpetance rate = 36.83%\n"
      ]
     }
    ],
@@ -1213,6 +1213,7 @@
     "    Combine_MCMC_Chain(file_name, mcmc_path)\n",
     "    data = pd.read_csv(mcmc_path+file_name+'.txt', sep='\\s+')\n",
     "    accpetance_rate = (data[data['accept'] == 1]).shape[0] / data.shape[0] * 100\n",
+    "    print('accpetance rate = '+ str(np.round(accpetance_rate,2)) + '%')\n",
     "    data = data[data['accept'] == 1]\n",
     "    data = data.drop(columns=['likelihood', 'burn-in', 'CR1', 'CR2', 'CR3', 'accept', 'PA_1', 'ell_1'])\n",
     "    data['X0_1'] = (data['X0_1'] - bestfit_X0) * 0.04 * 1000\n",
@@ -1229,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3152bb59",
    "metadata": {},
    "outputs": [],
@@ -1252,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "1f33a6e0",
    "metadata": {},
    "outputs": [
@@ -1287,35 +1288,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.029680</td>\n",
-       "      <td>-0.011508</td>\n",
-       "      <td>2.375583</td>\n",
-       "      <td>0.828430</td>\n",
-       "      <td>10.243826</td>\n",
+       "      <td>-0.012196</td>\n",
+       "      <td>-0.011932</td>\n",
+       "      <td>2.373514</td>\n",
+       "      <td>0.828429</td>\n",
+       "      <td>10.234878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.022040</td>\n",
-       "      <td>-0.028616</td>\n",
-       "      <td>3.572503</td>\n",
-       "      <td>0.851297</td>\n",
-       "      <td>16.267256</td>\n",
+       "      <td>-0.016524</td>\n",
+       "      <td>0.006476</td>\n",
+       "      <td>3.570450</td>\n",
+       "      <td>0.851644</td>\n",
+       "      <td>16.271174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.024600</td>\n",
-       "      <td>0.005108</td>\n",
-       "      <td>3.684446</td>\n",
-       "      <td>0.786861</td>\n",
-       "      <td>14.333350</td>\n",
+       "      <td>0.021820</td>\n",
+       "      <td>0.018370</td>\n",
+       "      <td>3.685704</td>\n",
+       "      <td>0.786607</td>\n",
+       "      <td>14.329011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.011768</td>\n",
-       "      <td>0.004900</td>\n",
-       "      <td>9.223735</td>\n",
-       "      <td>0.799897</td>\n",
-       "      <td>37.081245</td>\n",
+       "      <td>-0.026564</td>\n",
+       "      <td>-0.004192</td>\n",
+       "      <td>9.222824</td>\n",
+       "      <td>0.799981</td>\n",
+       "      <td>37.085370</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1323,13 +1324,13 @@
       ],
       "text/plain": [
        "         X0        Y0       I_0     sigma       flux\n",
-       "0 -0.029680 -0.011508  2.375583  0.828430  10.243826\n",
-       "1 -0.022040 -0.028616  3.572503  0.851297  16.267256\n",
-       "2 -0.024600  0.005108  3.684446  0.786861  14.333350\n",
-       "3 -0.011768  0.004900  9.223735  0.799897  37.081245"
+       "0 -0.012196 -0.011932  2.373514  0.828429  10.234878\n",
+       "1 -0.016524  0.006476  3.570450  0.851644  16.271174\n",
+       "2  0.021820  0.018370  3.685704  0.786607  14.329011\n",
+       "3 -0.026564 -0.004192  9.222824  0.799981  37.085370"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "2cf0b567",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1428,7 @@
        "3  62.520786  0.008990  73.452096  0.008993  37.469106  0.283404      4"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
