added error extraction

--- a/Pipeline_imfit-LensImgs.ipynb
+++ b/Pipeline_imfit-LensImgs.ipynb
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "bb624408",
    "metadata": {
     "scrolled": false
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "4c7f9485",
    "metadata": {},
    "outputs": [
@@ -1216,21 +1216,147 @@
     "    print('accpetance rate = '+ str(np.round(accpetance_rate,2)) + '%')\n",
     "    data = data[data['accept'] == 1]\n",
     "    data = data.drop(columns=['likelihood', 'burn-in', 'CR1', 'CR2', 'CR3', 'accept', 'PA_1', 'ell_1'])\n",
-    "    data['X0_1'] = (data['X0_1'] - bestfit_X0) * 0.04 * 1000\n",
-    "    data['Y0_1'] = (data['Y0_1'] - bestfit_Y0) * 0.04 * 1000\n",
+    "    # data['X0_1'] = (data['X0_1'] - bestfit_X0) * 0.04 * 1000\n",
+    "    # data['Y0_1'] = (data['Y0_1'] - bestfit_Y0) * 0.04 * 1000\n",
     "    data.to_numpy()\n",
     "    \n",
     "    mcmc = pd.concat([mcmc, pd.DataFrame({\n",
     "        'X0': [data['X0_1'].median()],\n",
+    "        'X_0_err': [data['X0_1'].std()],\n",
     "        'Y0': [data['Y0_1'].median()],\n",
+    "        'Y_0_err': [data['Y0_1'].std()],\n",
     "        'I_0': [data['I_0_1'].median()],\n",
-    "        'sigma': [data['sigma_1'].median()]\n",
+    "        'I_0_err': [data['I_0_1'].std()],\n",
+    "        'sigma': [data['sigma_1'].median()],\n",
+    "        'sigma_err': [data['sigma_1'].std()]\n",
     "    })], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
+   "id": "f765936a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcmc['X_0_err'] = mcmc['X_0_err'].round(2)\n",
+    "mcmc['Y_0_err'] = mcmc['Y_0_err'].round(2)\n",
+    "mcmc['I_0_err'] = mcmc['I_0_err'].round(2)\n",
+    "mcmc['sigma_err'] = mcmc['sigma_err'].round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "709fab84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X0</th>\n",
+       "      <th>Y0</th>\n",
+       "      <th>I_0</th>\n",
+       "      <th>sigma</th>\n",
+       "      <th>X_0_err</th>\n",
+       "      <th>Y_0_err</th>\n",
+       "      <th>I_0_err</th>\n",
+       "      <th>sigma_err</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>519.443295</td>\n",
+       "      <td>507.563602</td>\n",
+       "      <td>2.373514</td>\n",
+       "      <td>0.828429</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>531.826887</td>\n",
+       "      <td>523.902962</td>\n",
+       "      <td>3.570450</td>\n",
+       "      <td>0.851644</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>509.772745</td>\n",
+       "      <td>526.264159</td>\n",
+       "      <td>3.685704</td>\n",
+       "      <td>0.786607</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>520.495336</td>\n",
+       "      <td>531.482795</td>\n",
+       "      <td>9.222824</td>\n",
+       "      <td>0.799981</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           X0          Y0       I_0     sigma  X_0_err  Y_0_err  I_0_err  \\\n",
+       "0  519.443295  507.563602  2.373514  0.828429     0.03     0.03     0.10   \n",
+       "1  531.826887  523.902962  3.570450  0.851644     0.02     0.02     0.10   \n",
+       "2  509.772745  526.264159  3.685704  0.786607     0.02     0.02     0.12   \n",
+       "3  520.495336  531.482795  9.222824  0.799981     0.01     0.01     0.14   \n",
+       "\n",
+       "   sigma_err  \n",
+       "0       0.02  \n",
+       "1       0.01  \n",
+       "2       0.02  \n",
+       "3       0.01  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcmc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "3152bb59",
    "metadata": {},
    "outputs": [],
@@ -1253,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "1f33a6e0",
    "metadata": {},
    "outputs": [
@@ -1282,55 +1408,81 @@
        "      <th>Y0</th>\n",
        "      <th>I_0</th>\n",
        "      <th>sigma</th>\n",
+       "      <th>X_0_err</th>\n",
+       "      <th>Y_0_err</th>\n",
+       "      <th>I_0_err</th>\n",
+       "      <th>sigma_err</th>\n",
        "      <th>flux</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.012196</td>\n",
-       "      <td>-0.011932</td>\n",
+       "      <td>519.443295</td>\n",
+       "      <td>507.563602</td>\n",
        "      <td>2.373514</td>\n",
        "      <td>0.828429</td>\n",
-       "      <td>10.234878</td>\n",
+       "      <td>0.030879</td>\n",
+       "      <td>0.031670</td>\n",
+       "      <td>0.103998</td>\n",
+       "      <td>0.023972</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.016524</td>\n",
-       "      <td>0.006476</td>\n",
+       "      <td>531.826887</td>\n",
+       "      <td>523.902962</td>\n",
        "      <td>3.570450</td>\n",
        "      <td>0.851644</td>\n",
-       "      <td>16.271174</td>\n",
+       "      <td>0.021448</td>\n",
+       "      <td>0.021201</td>\n",
+       "      <td>0.097054</td>\n",
+       "      <td>0.014081</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.021820</td>\n",
-       "      <td>0.018370</td>\n",
+       "      <td>509.772745</td>\n",
+       "      <td>526.264159</td>\n",
        "      <td>3.685704</td>\n",
        "      <td>0.786607</td>\n",
-       "      <td>14.329011</td>\n",
+       "      <td>0.019922</td>\n",
+       "      <td>0.021419</td>\n",
+       "      <td>0.116486</td>\n",
+       "      <td>0.015428</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.026564</td>\n",
-       "      <td>-0.004192</td>\n",
+       "      <td>520.495336</td>\n",
+       "      <td>531.482795</td>\n",
        "      <td>9.222824</td>\n",
        "      <td>0.799981</td>\n",
-       "      <td>37.085370</td>\n",
+       "      <td>0.009606</td>\n",
+       "      <td>0.010196</td>\n",
+       "      <td>0.136674</td>\n",
+       "      <td>0.006915</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         X0        Y0       I_0     sigma       flux\n",
-       "0 -0.012196 -0.011932  2.373514  0.828429  10.234878\n",
-       "1 -0.016524  0.006476  3.570450  0.851644  16.271174\n",
-       "2  0.021820  0.018370  3.685704  0.786607  14.329011\n",
-       "3 -0.026564 -0.004192  9.222824  0.799981  37.085370"
+       "           X0          Y0       I_0     sigma   X_0_err   Y_0_err   I_0_err  \\\n",
+       "0  519.443295  507.563602  2.373514  0.828429  0.030879  0.031670  0.103998   \n",
+       "1  531.826887  523.902962  3.570450  0.851644  0.021448  0.021201  0.097054   \n",
+       "2  509.772745  526.264159  3.685704  0.786607  0.019922  0.021419  0.116486   \n",
+       "3  520.495336  531.482795  9.222824  0.799981  0.009606  0.010196  0.136674   \n",
+       "\n",
+       "   sigma_err  flux  \n",
+       "0   0.023972   0.0  \n",
+       "1   0.014081   0.0  \n",
+       "2   0.015428   0.0  \n",
+       "3   0.006915   0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "2cf0b567",
    "metadata": {},
    "outputs": [
@@ -1428,7 +1580,7 @@
        "3  62.520786  0.008990  73.452096  0.008993  37.469106  0.283404      4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
