changed obs_point files

--- a/Pipeline_imfit-LensImgs.ipynb
+++ b/Pipeline_imfit-LensImgs.ipynb
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
    "id": "3152bb59",
    "metadata": {},
    "outputs": [],
@@ -1389,13 +1389,16 @@
     "    mcmc['mag'][i] = integral\n",
     "\n",
     "mcmc['mag_ratio'] = mcmc['mag'] / mcmc['mag'].max()\n",
+    "mcmc['mag_ratio'] = mcmc['mag_ratio'].round(2)\n",
+    "\n",
+    "# Error propagation for magnification ratio\n",
     "mcmc['mag_ratio_err'] = mcmc['mag_ratio'] * np.sqrt((mcmc['I_0_err'] / mcmc['I_0'])**2 + (mcmc['sigma_err'] / mcmc['sigma'])**2)\n",
     "mcmc['mag_ratio_err'] = mcmc['mag_ratio_err'].round(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 109,
    "id": "1f33a6e0",
    "metadata": {},
    "outputs": [
@@ -1434,6 +1437,8 @@
        "      <th>mag</th>\n",
        "      <th>mag_ratio</th>\n",
        "      <th>mag_ratio_err</th>\n",
+       "      <th>X_mas</th>\n",
+       "      <th>Y_mas</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1451,8 +1456,10 @@
        "      <td>0.02</td>\n",
        "      <td>NaN</td>\n",
        "      <td>10.258513</td>\n",
-       "      <td>0.276690</td>\n",
+       "      <td>0.28</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>12.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1468,8 +1475,10 @@
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
        "      <td>16.206377</td>\n",
-       "      <td>0.437114</td>\n",
+       "      <td>0.44</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>13.30</td>\n",
+       "      <td>13.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1485,8 +1494,10 @@
        "      <td>0.02</td>\n",
        "      <td>NaN</td>\n",
        "      <td>14.469730</td>\n",
-       "      <td>0.390274</td>\n",
+       "      <td>0.39</td>\n",
        "      <td>0.02</td>\n",
+       "      <td>12.74</td>\n",
+       "      <td>13.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1502,8 +1513,10 @@
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
        "      <td>37.075820</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>0.02</td>\n",
+       "      <td>13.01</td>\n",
+       "      <td>13.29</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1516,20 +1529,78 @@
        "2  0.02  0.02  3.69   0.79  509.77  526.26    0.79    0.86     0.12   \n",
        "3 -0.03 -0.00  9.22   0.80  520.50  531.48    0.38    0.39     0.13   \n",
        "\n",
-       "   sigma_err  flux        mag  mag_ratio  mag_ratio_err  \n",
-       "0       0.02   NaN  10.258513   0.276690           0.01  \n",
-       "1       0.01   NaN  16.206377   0.437114           0.01  \n",
-       "2       0.02   NaN  14.469730   0.390274           0.02  \n",
-       "3       0.01   NaN  37.075820   1.000000           0.02  "
+       "   sigma_err  flux        mag  mag_ratio  mag_ratio_err  X_mas  Y_mas  \n",
+       "0       0.02   NaN  10.258513       0.28           0.01  12.99  12.69  \n",
+       "1       0.01   NaN  16.206377       0.44           0.01  13.30  13.10  \n",
+       "2       0.02   NaN  14.469730       0.39           0.02  12.74  13.16  \n",
+       "3       0.01   NaN  37.075820       1.00           0.02  13.01  13.29  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "mcmc['X_mas'] = (mcmc['X'] / 0.04 / 1000).round(2)\n",
+    "mcmc['Y_mas'] = (mcmc['Y'] / 0.04 / 1000).round(2)\n",
     "mcmc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ca0e22c",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "The units of `X0_err` are in milliarcseconds (mas). This is because the `X0` values were converted from pixels to milliarcseconds using the conversion factor `0.04 * 1000` in the previous cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f4aed33",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "The units of `X` are in pixels. This is because the `X` values were not converted from pixels to milliarcseconds like the `X0` values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "0848c898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    12.98600\n",
+      "1    13.29575\n",
+      "2    12.74425\n",
+      "3    13.01250\n",
+      "Name: X, dtype: float64\n",
+      "0    12.6890\n",
+      "1    13.0975\n",
+      "2    13.1565\n",
+      "3    13.2870\n",
+      "Name: Y, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mcmc['X'] / 0.04 / 1000)\n",
+    "print(mcmc['Y'] / 0.04 / 1000)"
    ]
   },
   {
