new lensing parameters

--- a/Pipeline_imfit-LensImgs.ipynb
+++ b/Pipeline_imfit-LensImgs.ipynb
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "id": "1f33a6e0",
    "metadata": {},
    "outputs": [
@@ -1458,8 +1458,8 @@
        "      <td>10.258513</td>\n",
        "      <td>0.28</td>\n",
        "      <td>0.01</td>\n",
-       "      <td>12.99</td>\n",
-       "      <td>12.69</td>\n",
+       "      <td>20.78</td>\n",
+       "      <td>20.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1477,8 +1477,8 @@
        "      <td>16.206377</td>\n",
        "      <td>0.44</td>\n",
        "      <td>0.01</td>\n",
-       "      <td>13.30</td>\n",
-       "      <td>13.10</td>\n",
+       "      <td>21.27</td>\n",
+       "      <td>20.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1496,8 +1496,8 @@
        "      <td>14.469730</td>\n",
        "      <td>0.39</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>12.74</td>\n",
-       "      <td>13.16</td>\n",
+       "      <td>20.39</td>\n",
+       "      <td>21.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1515,8 +1515,8 @@
        "      <td>37.075820</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>13.01</td>\n",
-       "      <td>13.29</td>\n",
+       "      <td>20.82</td>\n",
+       "      <td>21.26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1530,20 +1530,20 @@
        "3 -0.03 -0.00  9.22   0.80  520.50  531.48    0.38    0.39     0.13   \n",
        "\n",
        "   sigma_err  flux        mag  mag_ratio  mag_ratio_err  X_mas  Y_mas  \n",
-       "0       0.02   NaN  10.258513       0.28           0.01  12.99  12.69  \n",
-       "1       0.01   NaN  16.206377       0.44           0.01  13.30  13.10  \n",
-       "2       0.02   NaN  14.469730       0.39           0.02  12.74  13.16  \n",
-       "3       0.01   NaN  37.075820       1.00           0.02  13.01  13.29  "
+       "0       0.02   NaN  10.258513       0.28           0.01  20.78  20.30  \n",
+       "1       0.01   NaN  16.206377       0.44           0.01  21.27  20.96  \n",
+       "2       0.02   NaN  14.469730       0.39           0.02  20.39  21.05  \n",
+       "3       0.01   NaN  37.075820       1.00           0.02  20.82  21.26  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mcmc['X_mas'] = (mcmc['X'] / 0.04 / 1000).round(2)\n",
-    "mcmc['Y_mas'] = (mcmc['Y'] / 0.04 / 1000).round(2)\n",
+    "mcmc['X_mas'] = (mcmc['X'] * 0.04).round(2)\n",
+    "mcmc['Y_mas'] = (mcmc['Y'] * 0.04).round(2)\n",
     "mcmc"
    ]
   },
