added alex plotting code

--- a/mag_calc (1).ipynb
+++ b/mag_calc (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "241cd29f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "dd8c0fc1",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e6adf608",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "CUBE_6  = 'Noisemap of cube_5'                                                  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ebe554c9",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d6c476c9",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "3  62.520786  0.008990  73.452096  0.008993  37.469106  0.283404      4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "4b810389",
    "metadata": {},
    "outputs": [],
@@ -236,12 +236,12 @@
     "######change here########\n",
     "M = data[0].header['HIERARCH Source Absolute AB Magnitude']\n",
     "z = data[0].header['Z_SOURCE']\n",
-    "flux = np.array(pred['flux'])"
+    "flux = np.array([10.258513, 16.206377, 14.469730, 37.075820])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "010c8965",
    "metadata": {},
    "outputs": [
@@ -250,8 +250,8 @@
      "output_type": "stream",
      "text": [
       "ms = 24.859927839860408\n",
-      "m = [23.10974805 22.77876558 22.8751261  21.86170121]\n",
-      "The magnifications are [ 5.013  6.799  6.222 15.823].\n"
+      "m = [23.2681735  22.77166968 22.89473346 21.87315762]\n",
+      "The magnifications are [ 4.332  6.844  6.111 15.657].\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "ee7fa5e7",
    "metadata": {},
    "outputs": [
@@ -270,8 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The flux ratios are [0.317 0.43  0.393 1.   ].\n",
-      "The magnification ratios are [0.317 0.43  0.393 1.   ].\n"
+      "The flux ratios are [0.277 0.437 0.39  1.   ].\n",
+      "The magnification ratios are [0.277 0.437 0.39  1.   ].\n"
      ]
     }
    ],
